fix：center-align忘れてた

--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -10,6 +10,7 @@
 
 #form form {
     font-size: 20px;
+    text-align: center;
 }
 
 #form button {
